--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,12 @@ label {
 
 .about-text {
     text-align: center;
+    font-size: 1em;
+    margin: 0em;
+    padding-top: 1em;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    padding-bottom: 1em;
 }
 
 .email-body {
