--- a/css/styles.css
+++ b/css/styles.css
@@ -53,9 +53,9 @@ label {
 }
 
 .email-body {
-    padding-left: 3em;
-    padding-right: 3em;
-    padding-bottom: 2em;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-bottom: 2vw;
 }
 
 .home-img {
@@ -68,7 +68,8 @@ label {
     background-color: #505050;
     display: flex;
     justify-content: center;
-    padding: 2em 3em;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
 }
 
 .link-button {
@@ -134,6 +135,8 @@ label {
 
 .navbar {
     background-color: #505050;
+    padding-top: 2vw;
+    padding-bottom: 2vw;
 }
 
 /*
