--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,9 @@ label {
 }
 
 .link-button {
-    margin: 0em 2em;
+    margin-left: 1em;
+    margin-right: 1em;
+    font-size: 1.75rem;
 }
 
 .page-subhead {
@@ -149,12 +151,15 @@ label {
     letter-spacing: 2px;
     margin: 0em;
     padding-left: 1em;
+    text-transform: uppercase;
 }
 
 .nav-button {
     color: #f0f0f0;
     text-decoration: none;
     transition-duration: 0.3s;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 .nav-button:hover {
@@ -167,14 +172,16 @@ label {
     font-size: 1em;
     letter-spacing: 2px;
     list-style: none;
-    margin: 0em;
-    text-transform: uppercase;  
+    margin: 0;
+    text-transform: uppercase;
 }
 
+/*
 .nav-selection li {
     margin-left: 1em;
     margin-right: 1em;
 }
+*/
 
 .resume-link {
     align-items: center;
