--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ input[type=submit] {
     color: #f0f0f0;
     cursor: pointer;
     margin: 3em 0em;
+    text-transform: uppercase;
     transition-duration: 0.3s;
 }
 
