--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,25 @@
+@media screen and (min-width: 720px) {
+
+}
+
+@media screen and (min-width: 720px) and (max-width: 1024px) {
+    .section-body {
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1600px) {
+    .section-body {
+        margin-left: 10vw;
+        margin-right: 10vw;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    /* Stop screen from scaling */
+}
+
 body {
     background-color: #0f0f0f;
     color: #ffffff;
@@ -44,18 +66,13 @@ label {
 }
 
 .about-text {
-    text-align: center;
     font-size: 1em;
     margin: 0em;
     padding-top: 1em;
-    padding-left: 5vw;
-    padding-right: 5vw;
     padding-bottom: 1em;
 }
 
 .email-body {
-    padding-left: 3vw;
-    padding-right: 3vw;
     padding-bottom: 2vw;
 }
 
@@ -87,23 +104,18 @@ label {
 }
 
 .project-body {
-    align-items: center;
     display: flex;
-    padding-top: 1em;
-    padding-left: 2em;
-    padding-right: 2em;
-    padding-bottom: 1em;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 
 .project-desc {
     flex: 1;
-    margin-left: 1em;
 }
 
 .project-head {
     font-size: 2em;
     margin: 0;
-    padding-left: 2.4em;
 }
 
 .project-img {
@@ -115,15 +127,21 @@ label {
     font-style: italic;
     margin: 0em;
     padding-top: 1em;
-    padding-left: 5em;
-    padding-right: 5em;
     padding-bottom: 1em;
 }
 
+.project-bodytext {
+    font-size: 1em;
+    margin: 0em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+
 .section-body {
     padding-top: 2em;
-    padding-left: 3em;
-    padding-right: 3em;
+    padding-left: 3rem;
+    padding-right: 3rem;
     padding-bottom: 2em;
 }
 
