--- a/css/styles.css
+++ b/css/styles.css
@@ -4,20 +4,26 @@
 
 @media screen and (min-width: 720px) and (max-width: 1024px) {
     .section-body {
-        margin-left: 5vw;
-        margin-right: 5vw;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 720px;
     }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1600px) {
     .section-body {
-        margin-left: 10vw;
-        margin-right: 10vw;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1024px;
     }
 }
 
 @media screen and (min-width: 1600px) {
-    /* Stop screen from scaling */
+    .section-body {
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 1280px;
+    }
 }
 
 body {
@@ -139,6 +145,7 @@ label {
 
 
 .section-body {
+    align-self: center;
     padding-top: 2em;
     padding-left: 3rem;
     padding-right: 3rem;
