--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
-@media screen and (min-width: 720px) {
-
+@media screen and (max-width: 640px) {
+    .navbar {
+        grid-template-columns: 1fr;
+    }
 }
 
 @media screen and (min-width: 720px) and (max-width: 1024px) {
@@ -162,6 +164,9 @@ label {
 }
 
 .navbar {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
     background-color: #505050;
     padding-top: 2vw;
     padding-bottom: 2vw;
@@ -175,8 +180,10 @@ label {
 .nav-home {
     font-size: 1em;
     letter-spacing: 2px;
-    margin: 0em;
-    padding-left: 1em;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 1em;
+    margin-right: 1em;
     text-transform: uppercase;
 }
 
@@ -184,8 +191,8 @@ label {
     color: #f0f0f0;
     text-decoration: none;
     transition-duration: 0.3s;
-    padding-left: 1em;
-    padding-right: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 .nav-button:hover {
@@ -198,7 +205,10 @@ label {
     font-size: 1em;
     letter-spacing: 2px;
     list-style: none;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding:0 0;
+    justify-content: end;
     text-transform: uppercase;
 }
 
