--- a/css/styles.css
+++ b/css/styles.css
@@ -286,7 +286,7 @@ Text color for navbar hovered: #ffffff
     height: 75vh;
     width: 85vw;
     border-radius: 3px;
-    grid-template-rows: 80% 20%;
+    grid-template-rows: 85% 15%;
     align-items: center;
     padding: 1.25em;
     border: 1px solid white;
@@ -317,10 +317,10 @@ Text color for navbar hovered: #ffffff
 
 .media-files {
     display: flex;
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.3s ease-in-out;
 }
 
-.media-files img, .media-files video {
+.media-files div {
     width: 100%;
     flex-shrink: 0;
 }
@@ -349,9 +349,14 @@ Text color for navbar hovered: #ffffff
 
 .media-dots {
     display: flex;
+    position: absolute;
     justify-content: center;
     gap: 10px;
     margin-top: 10px;
+    margin-bottom: 10px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .media-dot {
