--- a/css/styles.css
+++ b/css/styles.css
@@ -323,13 +323,16 @@ Text color for navbar hovered: #ffffff
 }
 
 .media-files div {
+    display: flex;
     width: 100%;
+    max-height: 100%;
     flex-shrink: 0;
-    align-self: center;
+    justify-content: center;
 }
 
 .media-files video {
     max-width: 100%;
+    max-height: 100%;
     height: auto;
 }
 
@@ -365,6 +368,9 @@ Text color for navbar hovered: #ffffff
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px;
+    border-radius: 10px;
 }
 
 .media-dot {
