--- a/css/styles.css
+++ b/css/styles.css
@@ -79,9 +79,11 @@ label {
 }
 
 .home-img {
+    display: flex;
     position: relative;
     margin-top: 4vw;
     justify-self: center;
+    justify-content: center;
 }
 
 .portrait {
